// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a success message 2`] = `
<div
  data-message=""
>
  Form sent successfully
</div>
`;

exports[`should display an error message if there is a problem with the API 1`] = `
<div
  data-message=""
>
  There was an error sending the request. Please try again.
</div>
`;
